Changed landing page with new design

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,16 @@
 <!-- footer Start -->
-<footer>
+<footer class="stars">
   <div class="container">
     <div class="row">
-      <div class="col-md-12">
-        <div class="footer-manu">
-          <ul>
-            <li><a href="{{ site.baseurl }}">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#challenges">Challenges</a></li>
-            <li><a href="#special_guests">Special Guests</a></li>
-            <li><a href="#sponsors">Sponsors</a></li>
-          </ul>
-        </div>
+      <div class="col-md-9 col-sm-8">
+        <a href="htpt://jshacks.io">jshacks.io</a> / <a href="mailto:contact@jshacks.io">contact@jshacks.io</a> 
+      </div>
+      <div class="col-md-3 col-sm-4">
+        <ul class="text-right">
+          <a href="https://www.facebook.com/events/554913261366690/"><li><i class="fa fa-facebook" aria-hidden="true"></i></li></a>
+          <a href="https://twitter.com/jshacksio"><li><i class="fa fa-twitter" aria-hidden="true"></i></li></a>
+          <a href="https://github.com/js-hacks/"><li><i class="fa fa-github" aria-hidden="true"></i></li></a>
+        </ul>
       </div>
     </div>
   </div>
