--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,26 +1,19 @@
 <!-- Header Start -->
-<header>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <!-- header Nav Start -->
-        <nav class="navbar navbar-default">
-          <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="index.html">
-                <img src="{{ site.baseurl }}/img/logo.png" alt="Logo" style="width: auto; max-height: 75px;">
-              </a>
-            </div>
-          </div><!-- /.container-fluid -->
-        </nav>
-      </div>
+<!-- header Nav Start -->
+<nav class="navbar navbar-default navbar-transparent navbar-fixed-top navbarhome" role="navigation">
+    <div class="container">
+    <div class="navbar-header">
+        <button id="menu-toggle" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar bar1"></span>
+            <span class="icon-bar bar2"></span>
+            <span class="icon-bar bar3"></span>
+        </button>
+        <a class="navbar-brand" href="http://jshacks.io/">
+          <img src="{{ site.baseurl }}/img/logo_buc_chisinau_white.png" alt="Logo JSHacks">
+        </a>
     </div>
   </div>
-</header><!-- header close -->
+</nav>
+
+
