--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,5 +30,15 @@
 <script src="https://maps.googleapis.com/maps/api/js"></script>
 <script src="{{ site.baseurl }}/js/google-map-init.js"></script>
 
-
 <script src="{{ site.baseurl }}/js/main.js"></script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-85656775-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
